--- a/auth_app/templates/login.html
+++ b/auth_app/templates/login.html
@@ -6,18 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>User Registration</h3>
-    {% if error %}
-        <p style="color: red;">{{error}}</p>
-    {% endif %}
+    <h3>LOGIN</h3>
     <form action="" method="post">
         {% csrf_token %}
         <input type="text" name="username" placeholder="Username"><br/>
-        <input type="email" name="email" placeholder="Email"><br/>
         <input type="password" name="password" placeholder="Password"><br/>
-        <input type="password" name="confirmpassword" placeholder="Confirm Password"><br/>
-        <p>Already have an account? <span><a href="{% url 'login' %}">LOGIN</a></span></p>
-        <button type="submit">Register</button>
+        <button type="submit">LOGIN</button>
     </form>
 </body>
 </html>
