--- a/auth_app/templates/login.html
+++ b/auth_app/templates/login.html
@@ -7,10 +7,14 @@
 </head>
 <body>
     <h3>LOGIN</h3>
+    {% if error %}
+        <p style="color: red;">{{ error }}</p>
+    {% endif %}
     <form action="" method="post">
         {% csrf_token %}
         <input type="text" name="username" placeholder="Username"><br/>
         <input type="password" name="password" placeholder="Password"><br/>
+        <p>Don't have an account? <span><a href="{% url 'register' %}">Register</a></span></p>
         <button type="submit">LOGIN</button>
     </form>
 </body>
