--- a/auth_app/templates/dashboard.html
+++ b/auth_app/templates/dashboard.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
-    <h1>Dashboard</h1>
-    <p>Welcome to pyrhon django official dashboard page</p>
-    <button type="submit"><a href="{% url 'logout' %}">LOGOUT</a></button>
+<body class="bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Dashboard</a>
+            <div class="d-flex">
+            <a href="{% url 'logout' %}" class="btn btn-outline-light">Logout</a>
+            </div>
+        </div>
+    </nav>
+    <div class="container mt-5 text-center">
+        <h2>Welcome, {{ request.user.username }} </h2>
+        <p class="lead">This is your dashboard.</p>
+    </div>
 </body>
 </html>
